did a loosely set-up of the positioning of the elements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
 
   <body>
@@ -21,7 +21,7 @@
           </header>
           <article>
             <h3>Capture and Share the World's Moments</h3>
-            <p>Instagram is a fast, beautiful and fun way to share your life with
+            <p>Instagram is a <b>fast</b>,<b>beautiful</b> and <b>fun</b> way to share your life with
               friends and family.</p>
             <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
               - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
